fix compress intrinsics to produce correct results with avx512

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b150
    • x86
    • generic

      Currently the EVEX enabled version needs some rework for compress to function properly. The code is not properly processing the input array.

            Assignee:
            Vivek Deshpande (Inactive)
            Reporter:
            Michael Berg (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                Estimated:
                Original Estimate - 2 weeks
                2w
                Remaining:
                Remaining Estimate - 2 weeks
                2w
                Logged:
                Time Spent - Not Specified
                Not Specified