8165287: fix compress intrinsics to produce correct results with avx512

Reviewed-by: kvn